Load balancer demo with nginx, workers, postgres logging

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ __pycache__/      # Python bytecode cache directory (auto-generated)
 *.pyc             # Compiled Python bytecode files
 .env              # Environment variables / secrets (should never be committed)
 .DS_Store         # macOS system metadata file
+.pgdata/          # ignore local Postgres volume data
+
+*.log
+.env.*
+.idea/
+.vscode/
