--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,34 @@
 services:
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: app
+      POSTGRES_PASSWORD: app
+      POSTGRES_DB: appdb
+    ports:
+      - "5433:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   worker:
     build: ./lb-demo/worker
-    deploy:
-      replicas: 3
-    expose:
-      - "8000"
+    environment:
+      DB_HOST: db
+      DB_PORT: "5432"
+      DB_NAME: appdb
+      DB_USER: app
+      DB_PASSWORD: app
+    depends_on:
+      - db
 
   nginx:
-    image: nginx:latest
+    image: nginx:alpine
     ports:
       - "8080:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - worker
+
+volumes:
+  pgdata:
